# research-assistant

./: .env.example  .gitignore  DOCS.md  PLAN.md  README.md  pyproject.toml  requirements.txt
scripts/: smoke_test.py
src/research_assistant/: __init__.py  cli.py  config.py  session.py
src/research_assistant/api/: __init__.py
src/research_assistant/qa/: __init__.py  engine.py
src/research_assistant/sources/: __init__.py  aggregator.py  arxiv_client.py  base.py  domains.py  openalex.py  query_rewriter.py  semantic_scholar.py
src/research_assistant/synthesis/: __init__.py  review.py
tests/: test_domains.py  test_library.py  test_qa.py  test_query_rewriter.py  test_retrieval.py  test_sources.py  test_synthesis.py
